--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
-	"name": "cascadestudio",
-	"productName": "CascadeStudio",
-	"description": "BRep SCAD in your browser.",
-	"homepage": "https://zalo.github.io/CascadeStudio",
+	"name": "ai-3d-cad-studio",
+	"productName": "AI 3D CAD Studio",
+	"version": "1.0.0",
+	"description": "AI驱动的在线CAD建模工具 - 基于OpenCascade.js和DeepSeek",
+	"homepage": "https://github.com/yourusername/AI3D",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/zalo/CascadeStudio.git"
+		"url": "git+https://github.com/yourusername/AI3D.git"
 	},
 	"author": {
-		"name": "Johnathon Selstad"
+		"name": "AI 3D Studio"
 	},
 	"license": "MIT",
-	"bundleDependencies": false,
+	"scripts": {
+		"start": "npx http-server -p 8080 -c-1",
+		"dev": "npx http-server -p 8080 -c-1 -o",
+		"test": "cd test && npm test"
+	},
+	"keywords": [
+		"CAD",
+		"3D",
+		"AI",
+		"OpenCascade",
+		"DeepSeek",
+		"Modeling",
+		"SCAD"
+	],
+	"bundleDependencies": [],
 	"dependencies": {
-		"tweakpane": "^3.0.5",
+		"@supabase/supabase-js": "^2.90.1",
+		"axios": "^1.13.2",
 		"golden-layout": "^1.5.9",
 		"jquery": "^3.5.1",
 		"monaco-editor": "^0.20.0",
 		"opencascade.js": "^0.1.15",
-		"three": "^0.129.0"
+		"three": "^0.129.0",
+		"tweakpane": "^3.0.5"
+	},
+	"devDependencies": {
+		"http-server": "^14.1.1"
 	}
 }
